# superdupermemory

./: .gitignore  CLAUDE.example.md  CLAUDE.md  Cargo.toml  Dockerfile  LICENSE  README.md  docker-compose.yml  install.sh  prd.md
.claude/: settings.json
.github/workflows/: ci.yml  docker.yml  docs.yml  release.yml  sdk-publish.yml
bench/: README.md  requirements.txt  run_locomo.py  sdm_client.py
crates/api/: Cargo.toml
crates/api/src/: lib.rs
crates/core/: Cargo.toml
crates/core/src/: extractor.rs  fact.rs  lib.rs
crates/embed/: Cargo.toml
crates/embed/src/: fast.rs  lib.rs  openai.rs
crates/eval/: Cargo.toml
crates/eval/src/: case.rs  fixtures.rs  main.rs  metrics.rs  runner.rs
crates/server/: Cargo.toml
crates/server/src/: bench.rs  install.rs  main.rs  tools.rs
crates/store/: Cargo.toml
crates/store/src/: crypto.rs  lib.rs  sqlite.rs  tenant.rs
docs/: index.md  package-lock.json  package.json
docs/.vitepress/: config.mts
docs/api/: index.md  memories.md  orgs.md
docs/guide/: configuration.md  index.md  quickstart.md  self-hosting.md
docs/sdk/: admin.md  index.md  memory.md
sdk/: README.md  package-lock.json  package.json
sdk/src/: index.ts
webapp/: .gitignore  index.html  package-lock.json  package.json
webapp/src/: App.tsx  api.ts
webapp/src/components/: CopyButton.tsx  Layout.tsx
webapp/src/pages/: AppDetail.tsx  Dashboard.tsx  Login.tsx
