[package]
name = "superdupermemory-api"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
superdupermemory-core.workspace = true
superdupermemory-store.workspace = true
superdupermemory-embed.workspace = true

axum.workspace = true
tower.workspace = true
tower-http.workspace = true
include_dir.workspace = true
mime_guess.workspace = true

tracing.workspace = true

tokio.workspace = true
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
chrono.workspace = true
rand.workspace = true
base64.workspace = true
