[package]
name = "superdupermemory-core"
description = "Core types, traits, and extraction logic for superdupermemory"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
uuid.workspace = true
chrono.workspace = true
thiserror.workspace = true
reqwest.workspace = true
