[package]
name = "superdupermemory-embed"
description = "Embedder trait and fastembed implementation for superdupermemory"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
async-trait.workspace = true
anyhow.workspace = true
tokio.workspace = true
fastembed.workspace = true
reqwest.workspace = true
serde_json.workspace = true
