[package]
name = "superdupermemory"
description = "Local-first memory layer for AI agents, exposed over MCP"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[[bin]]
name = "superdupermemory"
path = "src/main.rs"

[dependencies]
superdupermemory-core.workspace = true
superdupermemory-store.workspace = true
superdupermemory-embed.workspace = true

tokio.workspace = true
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
schemars.workspace = true
rmcp.workspace = true
dotenvy.workspace = true
