[package]
name = "superdupermemory-store"
description = "MemoryStore trait and SQLite implementation for superdupermemory"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
superdupermemory-core.workspace = true
async-trait.workspace = true
anyhow.workspace = true
serde_json.workspace = true
chrono.workspace = true
rusqlite.workspace = true
tokio.workspace = true
